<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.chefpal.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home">
        <action
                android:id="@+id/action_homeFragment_to_recipeFragment"
                app:destination="@id/navigation_recipe"
                app:popUpTo="@id/navigation_home"
                app:popUpToInclusive="true"/>
    </fragment>

    <fragment
            android:id="@+id/navigation_recipe"
            android:name="com.example.chefpal.ui.recipe.RecipeFragment"
            android:label="@string/title_recipe"
            tools:layout="@layout/fragment_recipe"/>

    <fragment
            android:id="@+id/navigation_favorites"
            android:name="com.example.chefpal.ui.favorites.FavoritesFragment"
            android:label="@string/title_favorites"
            tools:layout="@layout/fragment_favorites">
        <action
                android:id="@+id/action_favoritesFragment_to_recipeFragment"
                app:destination="@id/navigation_recipe"
                app:popUpTo="@id/navigation_favorites"
                app:popUpToInclusive="true"/>
    </fragment>

    <fragment
            android:id="@+id/navigation_settings"
            android:name="com.example.chefpal.ui.settings.SettingsFragment"
            android:label="@string/title_settings"
            tools:layout="@layout/fragment_settings"/>
</navigation>