<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        tools:context=".ui.recipeDisplay.RecipeFragment">

        <!--<ImageView
                       android:id="@+id/cover"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/wyam"
                       android:adjustViewBounds="true"
                       android:contentDescription="@string/cover"/>-->

        <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/name_place_holder"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:lines="1"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_placeholder"
                android:textColor="@color/darkGray"
                android:textSize="18sp"
                android:lines="1"
                app:layout_constraintTop_toBottomOf="@id/name"/>

        <TextView
                android:id="@+id/recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/recipe_placeholder"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="@id/description"/>

        <Button
                android:id="@+id/favoriteButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginBottom="?attr/actionBarSize"
                android:text="@string/favorite_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>